trying to prevent removal of tests folder from compiled folder

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,5 @@ pnpm-lock.yaml
 package-lock.json
 Compiled_From_Typescript_Into_Javascript/*
 !Compiled_From_Typescript_Into_Javascript/.gitkeep
+!Compiled_From_Typescript_Into_Javascript/tests/*
 tsconfig.tsbuildinfo
